<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.training.lequar.trainingfit.Register"
    android:id="@+id/register"
    android:background="@color/White">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/col1"
            android:layout_width="@dimen/fifty"
            android:layout_height="wrap_content"
            android:background="@color/White">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:id="@+id/google"
                android:layout_marginStart="0dp"
                android:src="@drawable/gg"
                android:contentDescription="@string/google" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/col2"
            android:layout_width="@dimen/fifty"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:layout_toEndOf="@+id/col1"
            android:layout_marginStart="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:id="@+id/facebook"
                android:src="@drawable/fb"
                android:gravity="center"
                android:contentDescription="@string/facebook"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/col1"
        android:layout_toStartOf="@+id/col2"
        android:id="@+id/col3"
        android:background="@color/White">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/name"
            android:id="@+id/labelName"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lastName"
            android:id="@+id/labelLast"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lastName" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/col3"
        android:layout_alignStart="@+id/col2"
        android:background="@color/White">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email"
            android:id="@+id/labelEmail"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/phone"
            android:id="@+id/labelPhone"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/col3"
        android:layout_alignParentEnd="true"
        android:background="@color/White"
        android:layout_marginTop="10dp"
        android:id="@+id/col5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pass"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <Button
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:text="@string/btnRegister"
        android:id="@+id/registerBtn"
        android:layout_below="@+id/col5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/registerBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/col5" />


</RelativeLayout>
